@@ -19,6 +19,8 @@ CHANGES IN R VERSION 1.3.0.9001:
       - concat_text()
       - remove_text()
       - filter_text()
+    * .GlobalEnv에 데이터 프레임 객체가 하나도 없을 경우에 Docs Explorer 구동과 
+      동시에 발생하는 에러 수정 (#13)  
       
   MINOR CHANGES:
     * 함수 이름으로 기능을 명확이 유추할 수 있도록 doc_quality()의 이름을 
@@ -26,7 +28,6 @@ CHANGES IN R VERSION 1.3.0.9001:
     * filter_text()에 as_logical 인수를 추가해서 필터링한 단일 문자열 벡터를 
       반환하거나, 필터링할 대상을 선택하기 위한 논리 벡터를 반환할지를 선택하는
       기능을 추가. 논리벡터는 tidytext 패키지와의 협업에 사용. (#14)
-      
       
       
       
